fixed input focus on tablets

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -197,11 +197,14 @@ a .link-icon a.link-icon, a:hover .link-icon, a.link-icon:hover, a:visited .link
 		top: 2px;
 	}
 
-	input {
+	input.form-control, input:focus.form-control {
+		display: inline-block;
 		border: none;
 		margin-left: 6px;
 		outline: 0;
-		width: 200px;
+		width: 100%;
+		box-shadow: none;
+		padding-left: 0px;
 	}
 }
 
